# nonebot-plugin-tieba-monitor

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_tieba_monitor/: __init__.py  config.py  filter.py  notification.py  requirements.txt  tieba.py
nonebot_plugin_tieba_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
